--- a/trendtailor/trendApp/templates/share_email6.html
+++ b/trendtailor/trendApp/templates/share_email6.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share This Article</title>
+    <title>Share Article-T6</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,6 +16,7 @@
         .email-container {
             max-width: 600px;
             margin: 20px auto;
+            color: white;
             background-color: #222;
             border-radius: 8px;
             text-align: center;
@@ -36,7 +37,7 @@
             margin-top: 15px;
         }
         .cta-button:hover {
-            background-color: #3e8e41;
+            background-color: #728e72;
         }
         .image-container {
             width: 100%;
@@ -80,7 +81,7 @@
     <div class="email-container">
         <!-- Logo -->
         <div class="header">
-            <img src="{% static 'images/TrendTailor_white.png' %}" alt="Logo Here" class="logo">
+            <img src="https://raw.githubusercontent.com/iaminhri/COSC-4P02/refs/heads/master/trendtailor/trendApp/static/images/TrendTailor_white.png" alt="Logo Here" class="logo">
         </div>
 
         <!-- Main Heading -->
