--- a/trendtailor/trendApp/templates/home.html
+++ b/trendtailor/trendApp/templates/home.html
@@ -10,6 +10,13 @@
             </form>
         </header>
 
+         <!-- Displays User Preferences -->
+    {% if preferences %}  
+    <div class="alert alert-info text-center mt-3">  
+        <strong>Your Preferences:</strong> {{ preferences|join:", " }}  
+    </div>  
+    {% endif %}
+
         <!-- Featured Content -->
         <section class="container-fluid my-4 px-5">
             <div class="row ">
